--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
+
   },
   "dependencies": {
     "next": "15.3.5",
